--- a/frontproyectogym/package.json
+++ b/frontproyectogym/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
